# WinAppy

./: .clang-format  CMakeLists.txt  LICENSE
cmake/: format.cmake
lib/: .clang-format  CMakeLists.txt
lib/inc/WinAppy/: atom.h  button.h  clipboard.h  control.h  dc.h  error.h  gdi.h  geo.h  layout.h  log.h  macros.h  msg_loop.h  thunk.h  window.h  window_api.h
lib/src/: stdafx.h
lib/src/WinAppy/: atom.cpp  button.cpp  clipboard.cpp  control.cpp  dc.cpp  error.cpp  gdi.cpp  layout.cpp  log.cpp  msg_loop.cpp  scope_exit.h  thunk.cpp  window.cpp  window_api.cpp
samples/: CMakeLists.txt  basic_win_app.cpp
